fix: fixed issues caused by wrong dependencies versions

--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,13 +1,17 @@
-FROM tensorflow/tensorflow:2.0.0-gpu-py3-jupyter
+FROM tensorflow/tensorflow:2.9.3-gpu-jupyter
 
 RUN apt-get update && apt-get install -y libmagickwand-dev git && apt-get clean
+RUN pip install --no-cache-dir -U pip
 
 WORKDIR /workspace
-RUN git clone https://github.com/andreacos/BoostingCNN-Jpeg-Primary-Quantization-Matrix-Estimation.git
-# Not sure that this requirements is correct (there are another one in 'resources' folder)
-# Removing some errorprone dependencies (tf, keras, cv2)
-RUN sed -i '1d;4d;10d' BoostingCNN-Jpeg-Primary-Quantization-Matrix-Estimation/requirements.txt
-RUN pip install --no-cache-dir numpy==1.19.5 opencv-python-headless==4.0.1.24 &&\
-    pip install --no-cache-dir -r BoostingCNN-Jpeg-Primary-Quantization-Matrix-Estimation/requirements.txt
+RUN pip install --no-cache-dir \
+    opencv-python-headless==4.6.*\
+    rawpy==0.17.* \
+    pandas \
+    Pillow==7.1.2 \
+    scikit-image==0.16.2 \
+    scipy==1.4.1 \
+    tqdm \
+    Wand
 
 CMD ["bash"]
